<resources>
    <string name="app_name">simpletodo</string>
    <string name="etNewItem_Hint">Touch to add task name</string>
    <string name="tv_Label">Edit Item Below:</string>
    <string name="btnSave_Caption">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="etDescriptionHint">Touch to add description</string>
    <string name="rbPriorityLow_">Low</string>
    <string name="rbPriorityNormal">Normal</string>
    <string name="rbPriorityHigh">High</string>
    <string name="btnCancelCapCaption">CANCEL</string>
    <string-array name="priorities">
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
    </string-array>
</resources>
