<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.simpletodo.ActivityEditItem">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/etItemName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/etNewItem_Hint"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:paddingBottom="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etItemDescription"
        android:layout_below="@+id/etItemName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/etDescriptionHint"
        android:paddingBottom="75dp" />

    <TextView
        android:text="Time:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etItemDescription"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/tvDueTime"
        android:textSize="18sp"
        android:drawableRight="@android:drawable/ic_menu_edit"
        android:minWidth="120dp"
         />

    <TextView
        android:text="Due Date:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDueDate"
        android:layout_below="@+id/etItemDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:drawableRight="@android:drawable/ic_menu_edit"
        android:minWidth="160dp" />

    <Button
        android:text="@string/btnSave_Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="114dp"
        android:id="@+id/btnSave"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onSaveItem"/>

    <Button
        android:text="@string/btnCancelCapCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnSave"
        android:layout_toLeftOf="@+id/btnSave"
        android:layout_toStartOf="@+id/btnSave"
        android:id="@+id/btnCancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="onCancel"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/spPriority"
        android:layout_toLeftOf="@+id/btnCancel"
        android:layout_toStartOf="@+id/btnCancel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvicon"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tvDueDate"
        android:layout_toEndOf="@+id/tvDueDate"
        android:drawableRight="@android:drawable/ic_menu_edit" />
</RelativeLayout>
