<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.Dialog_SelectPriority"
    android:weightSum="1">


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radioButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:text="@string/rbPriorityLow_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <RadioButton
            android:text="@string/rbPriorityNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:id="@+id/radioButton2"
            android:layout_below="@+id/radioButton"
            android:layout_alignLeft="@+id/radioButton"
            android:layout_alignStart="@+id/radioButton"
            android:textColor="@android:color/holo_green_light"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <RadioButton
            android:text="@string/rbPriorityHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:id="@+id/radioButton3"
            android:layout_below="@+id/radioButton2"
            android:layout_alignLeft="@+id/radioButton2"
            android:layout_alignStart="@+id/radioButton2"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <Button
            android:text="@android:string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:layout_marginLeft="84dp"
            android:layout_marginStart="84dp"
            android:layout_marginTop="153dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@android:string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOk"
            android:layout_alignBaseline="@+id/btnCancel"
            android:layout_alignBottom="@+id/btnCancel"
            android:layout_toRightOf="@+id/btnCancel"
            android:layout_toEndOf="@+id/btnCancel"
            android:layout_marginLeft="57dp"
            android:layout_marginStart="57dp" />

    </RelativeLayout>


</RelativeLayout>
